--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,5 +1,9 @@
 /* CSS stylesheet  for application */
 
+* {
+    font-family: 'Titillium Web', Times, serif;
+}
+
 table {
     border-collapse: collapse;
     border: 1px solid silver;
